# kindle-rank-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ranking_history.json  requirements.txt  ruff.toml  run_tests.py
.github/workflows/: daily-ranking.yml  test.yml
prompt/: code_review_guide.md  reviewer_personality.md
rules/: git.mdc  requirements-definition.mdc
src/: config.py  debug_output.html  debug_scraper.py  history_manager.py  main.py  notifier.py  scraper.py  summarizer.py  test_scraper.py
tests/: test_history_manager.py  test_notifier.py  test_scraper.py
